# pacjam

./: .gitignore  README.md  dep-all.sh  dep-find-new.py  dep-find.py  dep-src.py  dep-symbol.py  dep-trace.py  direct.txt  installed.json  python.dep  scrape.py  setup.sh  test.sh  transitive.txt  wget.sh
aux/: buildflags.conf  g++  gcc  ld  make
compilation_db/apt-utils/: compile_commands.json
debsecan/: Makefile  README  out
debtree-scripts/: ALL-CVES  border.py  color-dependencies.sh  color.py  debtree
dep-list/: bc.dep  chromium.dep  curl.dep  easy.dep  firefox-dir.dep  firefox-esr.dep  firefox-minus-vlc.dep  gawk.dep  gimp.dep  git-rebuild.dep  git.dep  vlc.dep  vlc.jessie.dep  wget.dep  xpdf.dep
docker/: Dockerfile.buster  Dockerfile.buster.vnc  Dockerfile.buster.vnc-kde  Dockerfile.buster.x11forwarding  Dockerfile.jessie-chrome.vnc  Dockerfile.jessie-chrome.x11forwarding  Dockerfile.jessie-vlc.vnc  Dockerfile.jessie-vlc.x11forwarding  Dockerfile.jessie.vlc  README.md
lzload/: CMakeLists.txt  setup.sh  test.sh
lzload/include/: lzload.h
lzload/src/: lzload.c
lzload/test/: dlopen-test.c  libpsl.so.5  loading-test.c  lzload-test.c  thread-test.c
optimization/: README.md  auto.sh  human_readable_sol.py  pm_ilp.py
policy/: README.md  blacklist.json  bnet-generator.py  fetch.py  policy.py  statistics.py
runners/: bc.sh  curl.sh  firefox.sh  gawk.sh  gimp.sh  git.sh  lzload.trace.10874  vlc.sh  wget.sh  xpdf.sh
scripts/: copy.py  diff.py  fold.py  scrape.py
test/: coreutils.dep  curl.dep  easy.dep  gawk.dep  wget-t.dep  wget.dep
(+527 files in other folders)
